--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,7 @@
 
     <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
     <string name="play_again">Play Again</string>
+    <string name="belum_nitip">Sepertinya anda belum menitipkan apapun..</string>
+    <string name="ambil_foto">ambil foto</string>
+    <string name="pilih_foto">Pilih foto</string>
 </resources>
