--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,8 @@
     <string name="belum_nitip">Sepertinya anda belum menitipkan apapun..</string>
     <string name="ambil_foto">ambil foto</string>
     <string name="pilih_foto">Pilih foto</string>
+    <string name="nama_dibutuhkan_untuk_keperluan_identitas">Nama dibutuhkan untuk keperluan identitas</string>
+    <string name="kami_membutuhkan_nomor_handphone_yang_terhubung_ke_whatsapp_untuk_menghubungi_anda_dalam_hal_konfirmasi_dan_sebagainya">Kami membutuhkan nomor handphone yang terhubung ke Whatsapp untuk menghubungi anda dalam hal konfirmasi dan sebagainya</string>
+    <string name="alamat_asli_anda_dibutuhkan_untuk_memastikan_bahwa_pesanan_anda_bukanlah_pesanan_fiktif">Alamat asli anda dibutuhkan untuk memastikan bahwa pesanan anda bukanlah pesanan fiktif</string>
+    <string name="kami_membutuhkan_alamat_penjemputan_barang_untuk_memindahkan_barang_anda_ke_gudang_kami">Kami membutuhkan alamat penjemputan barang untuk memindahkan barang anda ke gudang kami</string>
 </resources>
